unpackaged/config/ready/19_Student_Ledger/objects/redu_Student_Ledger__c.object
<CustomObject>
    <fields>
        <fullName>redu_Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Ledgers</relationshipLabel>
        <relationshipName>Student_Ledgers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>redu_Outstanding_Amount__c</fullName>
        <formula>redu_Total_Fees__c - redu_Total_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>redu_RIO_P1__c</fullName>
        <label>RIO_P1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redu_Total_Fees__c</fullName>
        <label>Total Fees</label>
        <summarizedField>redu_Ledger_Entry__c.redu_Fee_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>redu_Ledger_Entry__c.redu_Type__c</field>
            <operation>equals</operation>
            <value>Fee</value>
        </summaryFilterItems>
        <summaryForeignKey>redu_Ledger_Entry__c.redu_Student_Ledger__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>redu_Total_Payments__c</fullName>
        <label>Total Payments</label>
        <summarizedField>redu_Ledger_Entry__c.redu_Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>redu_Ledger_Entry__c.redu_Type__c</field>
            <operation>equals</operation>
            <value>Payment</value>
        </summaryFilterItems>
        <summaryForeignKey>redu_Ledger_Entry__c.redu_Student_Ledger__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Student Ledger</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SL-{000000}</displayFormat>
        <label>Student Ledger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Ledgers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>